# NINJA

./: LICENSE  LICENSE.TXT  Makefile  Makefile.config  README.md  autoclean.sh  configure.ac
scripts/: Makefile  mor.py  mst.py  nnm.py
src/: Makefile  Makefile.am  mor.cpp  mpi-wtime.h  mst.cpp  mst_io.cpp  mst_io.h  nin.cpp  nin_mpi_util.cpp  nin_mpi_util.h  nin_spsc_queue.h  nin_util.cpp  nin_util.h  ninj.cpp  ninj_fc.cpp  ninj_fc.h  ninj_thread.cpp  ninj_thread.h  nnm.cpp
test/: Makefile  Makefile.am  mst_test_hypre_parasails.c  mst_test_pingpong.c  mst_test_units.c  mst_test_util.c  mst_test_util.h  msub.sh  nin_test_hypre_parasails.c  nin_test_matching_race.c  nin_test_pingpong.c  nin_test_util.c  nin_test_util.h  ninja_test_hypre_parasails.c  ninja_test_matching_race.c  ninja_test_pingpong.c  ninja_test_units.c  ninja_test_util.c  run.example  run_sc16_ex3.sh  run_sc16_ex6.sh  run_sc16_ex6_NO.sh  run_sc16_ex7.sh
